Bug 17602. Keyboard access to HTML radio buttons should use arrow keys, as it does on most OS's radios as well as XUL radios. r=bryner, sr=neil